--- a/ultracode.html
+++ b/ultracode.html
@@ -471,7 +471,7 @@
         <h2>UltraCode</h2>
         <div class="ultracode-content">
             <div class="circle">
-                <img src="praise.jpg" alt="Praise Tunde Akinloye">
+                <img src="WIN_20250724_14_22_15_Pro.jpg" alt="Praise Tunde Akinloye">
             </div>
             <p>Ultracode empowers learners with coding skills combining expert instruction and real world projects to prepare students for careers in tech innovation and entrepreneurship across Africa and beyond.</p>
         </div>
@@ -694,4 +694,5 @@
         });
     </script>
 </body>
+
 </html>
